[package]
name = "finr"
version = "0.1.0"
edition = "2021"
author = "Gers2017"
description = """finr is a command line tool that recursively searches files and directories with a given pattern. Built with the phrase "Work smarter not harder" in mind."""

keywords = ["command-line", "find", "search", "pattern", "tool"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/Gers2017/finr"
license = "MIT"

[dependencies]
anyhow = "1.0.71"

[profile.release]
debug = false
