[package]
name = "finr"
version = "0.1.2"
edition = "2021"
authors = ["Gers2017"]
description = """finr is a command line tool that recursively searches files and directories with a given pattern. Built with the phrase "Work smarter not harder" in mind."""

keywords = ["command-line", "find", "search", "pattern", "tool"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/Gers2017/finr"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
bpaf = "0.8.1"

[profile.release]
debug = false
opt-level = 3
incremental = true
