[package]
name = "finr"
version = "0.1.2"
edition = "2021"
authors = ["Gers2017"]

description = """finr recursively searches files and directories with a pattern while ignoring irrelevant directories.
Built with the phrase "Work smarter not harder" in mind."""

keywords = ["command-line", "find", "search", "pattern", "tool"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/Gers2017/finr"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
regex = "1.8.3"

[profile.release]
debug = false
opt-level = 3
incremental = true

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
